@@ -1,3 +1,4 @@
+ReportBug=Rapporter un bug
 DuplicateExplanation=Pr\u00E9f\u00E9rences des origines des roms (1ere = pr\u00E9f\u00E9r\u00E9e)
 DuplicateAction=Suppression
 DuplicateWindowTitle=Suppression des doublons
